# second-brain-stack

./: .gitignore  CONTRIBUTING.md  Dockerfile.base  FINAL_STATUS.md  LICENSE  Makefile  README.md  ROADMAP.md  STACK_STATUS.md  STATUS.md  TEST_REPORT.md  VALIDATION_COMPLETE.md  brain.yml  cli.py  docker-compose.yml  pyproject.toml  pytest.ini  quick_test.sh  requirements.minimal.txt  requirements.txt  run_tests.sh  simple_test.py  start_services_local.sh  start_stack.sh  stop_services.sh  test_setup.py
connectors/: __init__.py  filesystem.py
connectors/filesystem/: __init__.py  scanner.py
core/: __init__.py
core/database/: __init__.py  models.py  operations.py
core/embeddings/: __init__.py  generators.py  similarity.py
core/search/: __init__.py  search_service.py
core/utils/: __init__.py  config.py  logging.py
docs/sample-content/: knowledge-graphs.md  machine-learning-fundamentals.md  python-programming-guide.md
infra/: Dockerfile.gateway  Dockerfile.service  docker-compose.yml
interfaces/cli/: __init__.py  __main__.py  main.py
services/chat/: Dockerfile  main.py
services/gateway/: Dockerfile  main.py
services/ingestion/: Dockerfile  main.py
services/knowledge/: Dockerfile  main.py
services/search/: Dockerfile  main.py
tests/: __init__.py  conftest.py  test_e2e.py  test_e2e_integration.py  test_full_integration.py  test_services.py  test_simple_smoke.py
tests/e2e/: test_cli.py
tests/integration/: test_database.py  test_performance.py  test_search.py
tests/unit/connectors/: test_filesystem.py
tests/unit/core/: test_config.py  test_database.py  test_models.py
